--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "@popperjs/core": "^2.10.2",
     "popper.js": "^1.16.1",
     "rxjs": "~7.4.0",
+    "sweetalert2": "^11.1.10",
     "tslib": "^2.3.0",
     "zone.js": "~0.11.4"
   },
